Hide signup page to authenticated users

--- a/codalab/apps/web/templates/web/account/signup.html
+++ b/codalab/apps/web/templates/web/account/signup.html
@@ -8,46 +8,51 @@
 
 {% block content %}
 
-<p>Already have an account? Then please <a href="{% url 'account_login' %}">sign in</a>.</p>
+<div class="user-authenticated">
+    You're already logged in! <a href="/rest/worksheets/?name=dashboard">Back to my dashboard.</a>
+</div>
+<div class="user-not-authenticated">
+    <p>Already have an account? Then please <a href="{% url 'account_login' %}">sign in</a>.</p>
 
-<form class="signup" id="signup_form" method="post" action="/rest/account/signup">
-    {% if request.GET.error %}
-    <div class="alert alert-error">
-        {{request.GET.error}}
-    </div>
-    {% endif %}
-    <div class="form-group">
-        <label for="id_email">Email:</label>
-        <input id="id_email" class="form-control" name="email" placeholder="Email" type="email" value="{{ request.GET.email }}" required autofocus>
-    </div>
-    <div class="form-group">
-        <label for="id_login">Username:</label>
-        <input id="id_login" class="form-control" name="username" placeholder="Username" type="text" value="{{ request.GET.username }}" required>
-    </div>
-    <div class="form-group">
-        <label for="id_login">First Name:</label>
-        <input id="id_firstname" class="form-control" name="first_name" placeholder="First Name" type="text" value="{{ request.GET.first_name }}" required>
-    </div>
-    <div class="form-group">
-        <label for="id_login">Last Name:</label>
-        <input id="id_lastname" class="form-control" name="last_name" placeholder="Last Name" type="text" value="{{ request.GET.last_name }}" required>
-    </div>
-    <div class="form-group">
-        <label for="id_login">Affiliation:</label>
-        <input id="id_affiliation" class="form-control" name="affiliation" placeholder="Affiliation" type="text" value="{{ request.GET.affiliation }}">
-    </div>
-    <div class="form-group">
-        <label for="id_password">Password:</label>
-        <input id="id_password" class="form-control" name="password" placeholder="Password" type="password" required>
-    </div>
-    <div class="form-group">
-        <label for="id_password_confirm">Confirm Password:</label>
-        <input id="id_password_confirm" class="form-control" name="confirm_password" placeholder="Password again" type="password" required>
-    </div>
-    <input type="hidden" name="success_uri" value="{% url 'account_signup_success' %}" />
-    <input type="hidden" name="error_uri" value="{{ request.path }}" />
-    <button type="submit">{% trans "Sign Up" %} &raquo;</button>
-</form>
+    <form class="signup" id="signup_form" method="post" action="/rest/account/signup">
+        {% if request.GET.error %}
+        <div class="alert alert-error">
+            {{request.GET.error}}
+        </div>
+        {% endif %}
+        <div class="form-group">
+            <label for="id_email">Email:</label>
+            <input id="id_email" class="form-control" name="email" placeholder="Email" type="email" value="{{ request.GET.email }}" required autofocus>
+        </div>
+        <div class="form-group">
+            <label for="id_login">Username:</label>
+            <input id="id_login" class="form-control" name="username" placeholder="Username" type="text" value="{{ request.GET.username }}" required>
+        </div>
+        <div class="form-group">
+            <label for="id_login">First Name:</label>
+            <input id="id_firstname" class="form-control" name="first_name" placeholder="First Name" type="text" value="{{ request.GET.first_name }}" required>
+        </div>
+        <div class="form-group">
+            <label for="id_login">Last Name:</label>
+            <input id="id_lastname" class="form-control" name="last_name" placeholder="Last Name" type="text" value="{{ request.GET.last_name }}" required>
+        </div>
+        <div class="form-group">
+            <label for="id_login">Affiliation:</label>
+            <input id="id_affiliation" class="form-control" name="affiliation" placeholder="Affiliation" type="text" value="{{ request.GET.affiliation }}">
+        </div>
+        <div class="form-group">
+            <label for="id_password">Password:</label>
+            <input id="id_password" class="form-control" name="password" placeholder="Password" type="password" required>
+        </div>
+        <div class="form-group">
+            <label for="id_password_confirm">Confirm Password:</label>
+            <input id="id_password_confirm" class="form-control" name="confirm_password" placeholder="Password again" type="password" required>
+        </div>
+        <input type="hidden" name="success_uri" value="{% url 'account_signup_success' %}" />
+        <input type="hidden" name="error_uri" value="{{ request.path }}" />
+        <button type="submit">{% trans "Sign Up" %} &raquo;</button>
+    </form>
+</div>
 
 
 {% endblock %}
