--- a/codalab/apps/web/static/less/worksheets.less
+++ b/codalab/apps/web/static/less/worksheets.less
@@ -755,3 +755,51 @@ html, body, #worksheet_container {height:100%;}
   margin: 0 !important;
   border-radius: 0 !important;
 }
+
+.help-container {
+    position: fixed;
+    bottom: 50px;
+    right: 50px;
+    z-index: 1;
+    background-color: lightsteelblue;
+    border-radius: 5px;
+    padding-left: 10px;
+}
+
+.help-button {
+    width: 50px;
+    height: 50px;
+    border-radius: 25px;
+    background-color: rgb(115, 156, 185);
+    color: white;
+    display: flex;
+    display: -webkit-flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    float: right;
+    margin: 3px;
+    border: none;
+    box-shadow: -8px 8px 17px 0px rgba(0,0,0,0.2);
+}
+
+.help-button:focus {
+    outline: none;
+}
+
+.help-message-box {
+    width: 550px;
+    height: 45px;
+    float: left;
+    margin: 5px;
+    margin-right: -30px;
+    padding: 3px;
+    border: none;
+    border-radius: 15px;
+    padding-left: 20px;
+    padding-right: 40px;
+}
+
+.help-message-box:focus {
+    outline: none;
+}
