--- a/codalab/apps/web/static/less/worksheets.less
+++ b/codalab/apps/web/static/less/worksheets.less
@@ -770,7 +770,7 @@ html, body, #worksheet_container {height:100%;}
     right: 50px;
     z-index: 1;
     background-color: lightsteelblue;
-    border-radius: 5px;
+    border-radius: 15px;
     padding-left: 10px;
 }
 
@@ -792,22 +792,29 @@ html, body, #worksheet_container {height:100%;}
 }
 
 .help-button:focus {
-    outline: none;
+  outline:none;
 }
 
 .help-message-box {
     width: 550px;
-    height: 45px;
+    height: 150px;
     float: left;
     margin: 5px;
     margin-right: -30px;
     padding: 10px;
     border: none;
-    border-radius: 15px;
+    border-radius: 10px;
     padding-left: 20px;
     padding-right: 40px;
+    resize: none; /* prevents the user-resizing, adjust to taste */
 }
 
 .help-message-box:focus {
     outline: none;
+    box-shadow: inset 0 0 3px 2px #f90; /* provides a more style-able
+                                           replacement to the outline */
+}
+
+.help-text {
+    padding: 10px;
 }
