finishes implementation of worksheet permissions toggle, refactors code

--- a/codalab/apps/web/templates/web/worksheets/detail.html
+++ b/codalab/apps/web/templates/web/worksheets/detail.html
@@ -133,6 +133,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.12/jquery.mousewheel.js"></script>
 
     {# ------- JSX FILES  ------- #}
+    <script src="{{ STATIC_URL }}dist/worksheet_permission_toggle.js"></script>
     <script src="{{ STATIC_URL }}dist/button.js"></script>
     <script src="{{ STATIC_URL }}dist/context_menu.js"></script>
     <script src="{{ STATIC_URL }}dist/worksheet_utils.js"></script>
