--- a/codalab/apps/web/static/less/worksheets.less
+++ b/codalab/apps/web/static/less/worksheets.less
@@ -477,6 +477,23 @@ html, body, #worksheet_container {height:100%;}
                      width:3px;
                      padding:0;
                   }
+
+                  &.table-column-_dropdown {
+                     width:25px;
+                     padding:0px;
+                     div {
+                        width:100%;
+                        height:100%;
+                        padding:3px 5px 0 5px;
+                        text-align: center;
+                        &:hover {
+                           color:@brand-primary;
+                        }
+                        span {
+                           margin-left:0px;
+                        }
+                     }
+                  }
                }
             }
          }
@@ -837,3 +854,23 @@ html, body, #worksheet_container {height:100%;}
     width: 150px;
 }
 
+select.soflow {
+   -webkit-appearance: button;
+   -webkit-border-radius: 2px;
+   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
+   -webkit-padding-end: 20px;
+   -webkit-padding-start: 2px;
+   -webkit-user-select: none;
+   background-image: url(http://i62.tinypic.com/15xvbd5.png), -webkit-linear-gradient(#FAFAFA, #F4F4F4 40%, #E5E5E5);
+   background-position: 89% center;
+   background-repeat: no-repeat;
+   border: 1px solid #AAA;
+   color: #555;
+   font-size: inherit;
+   margin: 10px;
+   overflow: hidden;
+   padding: 5px 10px;
+   text-overflow: ellipsis;
+   white-space: nowrap;
+   width: 100px;
+}
