Start migration to new API (#308)
Pick off some of the lowest hanging fruit for migration.

- Migrate to the new bundle contents info api
- Migrate to the new worksheet lines update api
- Migrate worksheet edit API
- Migrate bundle metadata update API
- Also: fix discard edits bug and update to new mathjax CDN (the old one has been deactivated)

--- a/codalab/apps/web/templates/web/worksheets/detail.html
+++ b/codalab/apps/web/templates/web/worksheets/detail.html
@@ -99,9 +99,9 @@
 
 {% block jsincludes %}
     {% if local_mathjax %}
-            <script src="{{ STATIC_URL }}bower_components/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+            <script id="mathjaxjs" src="{{ STATIC_URL }}bower_components/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     {% else %}
-            <script type="text/javascript" src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+            <script id="mathjaxjs" type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     {% endif %}
 
     {% if local_ace_editor %}
@@ -168,12 +168,14 @@
     {# ------- END JSX FILES  ------- #}
 
 <script>
-MathJax.Hub.Config({
-    tex2jax: {
+  document.querySelector('#mathjaxjs').addEventListener('load', function() {
+    MathJax.Hub.Config({
+      tex2jax: {
         skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
         inlineMath: [['$','$']]
-    }
-});
+      }
+    });
+  });
 </script>
 
 {% endblock jsincludes %}
