Finish migrating to new REST API (#309)
- Migrate user API
- Migrate bundles API
- Update all routes
- Remove extraneous bower packages

--- a/codalab/apps/web/templates/web/worksheets/detail.html
+++ b/codalab/apps/web/templates/web/worksheets/detail.html
@@ -131,6 +131,7 @@
     <link href="{{ STATIC_URL }}bower_components/jquery-ui/themes/smoothness/jquery-ui.min.css" rel="stylesheet" type="text/css">
     <script src="{{ STATIC_URL }}js/custom/jquery.ui.chatbox.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.12/jquery.mousewheel.js"></script>
+    <script src="{{ STATIC_URL }}bower_components/jsonapi-datastore/dist/jsonapi-datastore.min.js"></script>
 
     {# ------- JSX FILES  ------- #}
     <script src="{{ STATIC_URL }}dist/button.js"></script>
