--- a/codalab/apps/web/templates/web/bundles/detail.html
+++ b/codalab/apps/web/templates/web/bundles/detail.html
@@ -13,7 +13,7 @@
 {% endblock extra_scripts %}
 
 {% block content %}
-<div id="bundle-message" class="bundle-detail">
+<div id="bundle-loading-icon" class="bundle-detail">
     <img src="{{ STATIC_URL }}img/Preloader_Small.gif" /> Loading bundle...
 </div>
 <div id="bundle-content">
@@ -30,8 +30,9 @@
       // Fix for poshytip: https://github.com/vitalets/x-editable/issues/496
       $.fn.poshytip = { defaults: null };
     </script>
+    <script src="{{ STATIC_URL }}bower_components/underscore/underscore-min.js"></script>
     <script src="{{ STATIC_URL }}bower_components/react/react.min.js"></script>
-    {# TODO: remove JSX and move to deploy processing of JSX #}
+    <script src="{{ STATIC_URL }}bower_components/jsonapi-datastore/dist/jsonapi-datastore.min.js"></script>
     <script src="{{ STATIC_URL }}dist/worksheet_utils.js"></script>
     <script src="{{ STATIC_URL }}dist/file_browser.js"></script>
     <script src="{{ STATIC_URL }}dist/bundle_interface.js"></script>
