Adds link to overview video on home page (#315)

--- a/codalab/apps/web/templates/web/index.html
+++ b/codalab/apps/web/templates/web/index.html
@@ -42,6 +42,7 @@
             so you can be a more efficient researcher.
             <p>
             To get started, read more about the <a target="_blank" href="https://github.com/codalab/codalab-worksheets/wiki">mission</a>,
+            check out our two-minute overview <a target="_blank" href="https://www.youtube.com/watch?v=WwFGfgf3-5s">video</a>,
             <a href="/account/signup">sign up</a> for an account,
             and go through the <a target="_blank" href="https://github.com/codalab/codalab-worksheets/wiki/Quickstart">tutorial</a> to try it out!
             </p>
