--- a/codalab/apps/web/templates/web/worksheets/detail.html
+++ b/codalab/apps/web/templates/web/worksheets/detail.html
@@ -126,7 +126,7 @@
     <script src="{{ STATIC_URL }}bower_components/react/react.min.js"></script>
     <script src="{{ STATIC_URL }}bower_components/eventEmitter/EventEmitter.min.js"></script>
     <script src="{{ STATIC_URL }}bower_components/x-editable/dist/jquery-editable/js/jquery-editable-poshytip.min.js"></script>
-    <script src="{{ STATIC_URL }}js/custom/jquery.terminal-1.4.0.js"></script>
+    <script src="{{ STATIC_URL }}bower_components/jquery.terminal/js/jquery.terminal-1.4.2.min.js"></script>
     <script src="{{ STATIC_URL }}bower_components/jquery-ui/jquery-ui.min.js"></script>
     <link href="{{ STATIC_URL }}bower_components/jquery-ui/themes/smoothness/jquery-ui.min.css" rel="stylesheet" type="text/css">
     <script src="{{ STATIC_URL }}js/custom/jquery.ui.chatbox.js"></script>
