--- a/codalab/apps/web/templates/web/worksheets/detail.html
+++ b/codalab/apps/web/templates/web/worksheets/detail.html
@@ -126,6 +126,8 @@
     <script src="{{ STATIC_URL }}bower_components/react/react.min.js"></script>
     <script src="{{ STATIC_URL }}bower_components/eventEmitter/EventEmitter.min.js"></script>
     <script src="{{ STATIC_URL }}bower_components/x-editable/dist/jquery-editable/js/jquery-editable-poshytip.min.js"></script>
+    <script src="{{ STATIC_URL }}bower_components/keyboardevent-key-polyfill/index.js"></script>
+    <script>keyboardeventKeyPolyfill.polyfill();</script>
     <script src="{{ STATIC_URL }}bower_components/jquery.terminal/js/jquery.terminal-1.4.2.min.js"></script>
     <script src="{{ STATIC_URL }}bower_components/jquery-ui/jquery-ui.min.js"></script>
     <link href="{{ STATIC_URL }}bower_components/jquery-ui/themes/smoothness/jquery-ui.min.css" rel="stylesheet" type="text/css">
