--- a/codalab/apps/web/templates/web/bundles/detail.html
+++ b/codalab/apps/web/templates/web/bundles/detail.html
@@ -7,39 +7,30 @@
     <meta property="og:type" content="article">
     <meta property="og:image" content="{{ request.META.HTTP_HOST }}{{STATIC_URL}}img/codalab-logo.png">
 {% endblock %}
+
 {% block extra_scripts %}
 <!-- Read a script that fills in the bundle title. Add a timestamp to prevent caching. -->
 <script src="/rest/titlejs/bundle/{{ uuid }}/?={% now "U" %}"></script>
 {% endblock extra_scripts %}
 
 {% block content %}
-<div id="bundle-loading-icon" class="bundle-detail">
-    <img src="{{ STATIC_URL }}img/Preloader_Small.gif" /> Loading bundle...
-</div>
 <div id="bundle-content">
-    <!-- bundle html wil go here see bundle_interface.js -->
 </div>
 {% endblock content %}
 
-{% block js %}
-    {# moved below because the script tag is in base making this block not color code in editors #}
-{% endblock js %}
-
 {% block jsincludes %}
-    <script>
-      // Fix for poshytip: https://github.com/vitalets/x-editable/issues/496
-      $.fn.poshytip = { defaults: null };
-    </script>
-    <script src="{{ STATIC_URL }}bower_components/underscore/underscore-min.js"></script>
-    <script src="{{ STATIC_URL }}bower_components/react/react.min.js"></script>
-    <script src="{{ STATIC_URL }}bower_components/jsonapi-datastore/dist/jsonapi-datastore.min.js"></script>
-    <script src="{{ STATIC_URL }}dist/worksheet_utils.js"></script>
-    <script src="{{ STATIC_URL }}dist/file_browser.js"></script>
-    <script src="{{ STATIC_URL }}dist/bundle_interface.js"></script>
-    <script src="{{ STATIC_URL }}dist/editable_field.js"></script>
-    <script src="{{ STATIC_URL }}dist/collapsible.js"></script>
-    <script src="{{ STATIC_URL }}bower_components/x-editable/dist/jquery-editable/js/jquery-editable-poshytip.min.js"></script>
-<script>
-//
-</script>
+  <script>
+    let STATIC_URL = "{{ STATIC_URL }}";
+    // Fix for poshytip: https://github.com/vitalets/x-editable/issues/496
+    $.fn.poshytip = { defaults: null };
+  </script>
+  <script src="{{ STATIC_URL }}bower_components/underscore/underscore-min.js"></script>
+  <script src="{{ STATIC_URL }}bower_components/react/react.min.js"></script>
+  <script src="{{ STATIC_URL }}bower_components/jsonapi-datastore/dist/jsonapi-datastore.min.js"></script>
+  <script src="{{ STATIC_URL }}dist/worksheet_utils.js"></script>
+  <script src="{{ STATIC_URL }}dist/file_browser.js"></script>
+  <script src="{{ STATIC_URL }}dist/bundle_interface.js"></script>
+  <script src="{{ STATIC_URL }}dist/editable_field.js"></script>
+  <script src="{{ STATIC_URL }}dist/collapsible.js"></script>
+  <script src="{{ STATIC_URL }}bower_components/x-editable/dist/jquery-editable/js/jquery-editable-poshytip.min.js"></script>
 {% endblock jsincludes %}
