--- a/codalab/apps/web/static/less/button.less
+++ b/codalab/apps/web/static/less/button.less
@@ -42,3 +42,8 @@ a.button-default:hover {
 a.button-default:active {
     background-color: #f7f7f7;
 }
+
+a.button-disabled {
+    border: 1px solid #888888;
+    background-color: rgba(230, 230, 230, 1);
+}
