uses es6 transpiler

--- a/codalab/apps/web/templates/web/index.html
+++ b/codalab/apps/web/templates/web/index.html
@@ -105,6 +105,6 @@
 {% endblock content %}
 
 {% block jsincludes %}
-    <script src="{{ STATIC_URL }}bower_components/react/react.min.js"></script>
+    <script src="{{ STATIC_URL }}bower_components/react/react.js"></script>
     <script src="{{ STATIC_URL }}dist/sample_worksheets_interface.js"></script>
 {% endblock jsincludes %}
