--- a/codalab/apps/web/templates/web/worksheets/detail.html
+++ b/codalab/apps/web/templates/web/worksheets/detail.html
@@ -125,7 +125,7 @@
     <script src="{{ STATIC_URL }}js/custom/html4-defs.js"></script>
     <script src="{{ STATIC_URL }}js/custom/html-sanitizer.js"></script>
     <script src="{{ STATIC_URL }}bower_components/underscore/underscore-min.js"></script>
-    <script src="{{ STATIC_URL }}bower_components/react/react.min.js"></script>
+    <script src="{{ STATIC_URL }}bower_components/react/react.js"></script>
     <script src="{{ STATIC_URL }}bower_components/eventEmitter/EventEmitter.min.js"></script>
     <script src="{{ STATIC_URL }}bower_components/x-editable/dist/jquery-editable/js/jquery-editable-poshytip.min.js"></script>
     <script src="{{ STATIC_URL }}bower_components/keyboardevent-key-polyfill/index.js"></script>
