initializes skeleton implementation of search bar using webpack

--- a/codalab/apps/web/templates/base.html
+++ b/codalab/apps/web/templates/base.html
@@ -64,6 +64,9 @@
             </div>
             {% block top_bar_right_menus %}
                 <div class="collapse navbar-collapse" id="navbar_collapse">
+                    <span id="cl-search-bar">
+                    <!-- search bar binds here -->
+                    </span>
                     {% if BETA %}
                         <form action="/search" method="get" class="navbar-form navbar-left" role="search">
                             <div class="form-group">
