connect components with data

--- a/codalab/apps/web/templates/web/worksheets/detail.html
+++ b/codalab/apps/web/templates/web/worksheets/detail.html
@@ -117,6 +117,7 @@
       // Fix for poshytip: https://github.com/vitalets/x-editable/issues/496
       $.fn.poshytip = { defaults: null };
     </script>
+    <link rel="stylesheet" href="https://unpkg.com/react-select/dist/react-select.css">
     <link href="{{ STATIC_URL }}bower_components/c3/c3.min.css" rel="stylesheet" type="text/css">
     <script src="{{ STATIC_URL }}bower_components/d3/d3.min.js"></script>
     <script src="{{ STATIC_URL }}bower_components/c3/c3.min.js"></script>
