--- a/codalab/apps/web/static/less/button.less
+++ b/codalab/apps/web/static/less/button.less
@@ -44,6 +44,7 @@ a.button-default:active {
 }
 
 a.button-disabled {
-    border: 1px solid #888888;
+    border: 1px solid rgba(230, 230, 230, 1);
     background-color: rgba(230, 230, 230, 1);
+    color: rgba(180, 180, 180, 1);
 }
