change upload/new run button display based on authentication (#357)
Policy:
- If no user is logged in, show the buttons and redirect the user to the sign in page
- If a user is logged in an can't edit the worksheet, gray out the upload and new run buttons.
- If a user is logged in and can edit the worksheet, leave the buttons with their normal functionality

* if no user logged in, doesn't show upload button

* implement functionality for logged out users, no edit users

* updates changes based on feedback

--- a/codalab/apps/web/static/less/button.less
+++ b/codalab/apps/web/static/less/button.less
@@ -42,3 +42,9 @@ a.button-default:hover {
 a.button-default:active {
     background-color: #f7f7f7;
 }
+
+a.button-disabled {
+    border: 1px solid rgba(230, 230, 230, 1);
+    background-color: rgba(230, 230, 230, 1);
+    color: rgba(180, 180, 180, 1);
+}
