--- a/codalab/apps/web/templates/base.html
+++ b/codalab/apps/web/templates/base.html
@@ -48,7 +48,9 @@
     {% endblock extra_scripts %}
 </head>
 
-<body {% block custom_body_attributes %}{% endblock %}>
+<body style="padding-top:0" {% block custom_body_attributes %}{% endblock %}>
+  <div id="cl-search-bar"></div>
+  <!--
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container-fluid">
             <div class="navbar-header">
@@ -65,7 +67,9 @@
             {% block top_bar_right_menus %}
                 <div class="collapse navbar-collapse" id="navbar_collapse">
                     <span id="cl-search-bar">
+  -->
                     <!-- search bar binds here -->
+                    <!--
                     </span>
                     {% if BETA %}
                         <form action="/search" method="get" class="navbar-form navbar-left" role="search">
@@ -105,6 +109,7 @@
             {% endblock top_bar_right_menus %}
         </div>
     </nav>
+    -->
 
     {% block nosubheader %}
         {% block subheader %}
