--- a/codalab/apps/web/templates/web/worksheets/detail.html
+++ b/codalab/apps/web/templates/web/worksheets/detail.html
@@ -139,6 +139,7 @@
     <script src="{{ STATIC_URL }}bower_components/jsonapi-datastore/dist/jsonapi-datastore.min.js"></script>
 
     {# ------- JSX FILES  ------- #}
+    <link href="{{ STATIC_URL }}dist/main.css" rel="stylesheet" type="text/css">
     <script src="{{ STATIC_URL }}dist/new_main.js"></script>
     <script src="{{ STATIC_URL }}dist/button.js"></script>
     <script src="{{ STATIC_URL }}dist/context_menu.js"></script>
