adds top bar back to home page, removes react select css styles

--- a/codalab/apps/web/templates/base.html
+++ b/codalab/apps/web/templates/base.html
@@ -146,7 +146,9 @@
     <script src="{{ STATIC_URL }}bootstrap/js/bootstrap.min.js"></script>
     <script src="{{ STATIC_URL }}bower_components/select2/dist/js/select2.min.js"></script>
     <script src="{{ STATIC_URL }}lib/jq/jquery.cookie.js"></script>
-    <script src="{{ STATIC_URL }}js/main.js"></script>
+  <script src="{{ STATIC_URL }}js/main.js"></script>
+    <script src="{{ STATIC_URL }}dist/new_main.js"></script>
+    <link href="{{ STATIC_URL }}dist/main.css" rel="stylesheet" type="text/css">
 
     {% block jsincludes %}
     {% endblock jsincludes %}
