fixes navbar positioning

--- a/codalab/apps/web/static/less/worksheets.less
+++ b/codalab/apps/web/static/less/worksheets.less
@@ -25,7 +25,7 @@
       .label-danger;
    }
 }
-html, body, #worksheet_container {height:100%;}
+html, body, #worksheet_container_outside, #worksheet_container {height:100%;}
 #worksheet-message {
    position:absolute;
    left:20px;
