keeps navbar in dashbaord, ensures that navbar stays on top

--- a/codalab/apps/web/templates/base.html
+++ b/codalab/apps/web/templates/base.html
@@ -49,6 +49,8 @@
 </head>
 
 <body style="padding-top:0" {% block custom_body_attributes %}{% endblock %}>
+    {% block navbar %}
+    {% endblock %}
   <!--
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container-fluid">
