--- a/codalab/apps/web/templates/web/index.html
+++ b/codalab/apps/web/templates/web/index.html
@@ -30,6 +30,10 @@
     </div>
 {% endblock hero_subheader %}
 
+{% block navbar%}
+  <div id="cl-search-bar" style="height: 50px; z-index:1000;"></div>
+{% endblock %}
+
 {% block content %}
     <div class="container">
         <div class="row">
