--- a/codalab/apps/web/templates/web/account/profile.html
+++ b/codalab/apps/web/templates/web/account/profile.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block navbar %}
+  <div id="cl-search-bar" style="height: 50px; z-index:1000;"></div>
+{% endblock %}
+
 {% load url from future %}
 {% load i18n %}
 
