--- a/codalab/apps/web/templates/web/bundles/detail.html
+++ b/codalab/apps/web/templates/web/bundles/detail.html
@@ -13,6 +13,9 @@
 <script src="/rest/titlejs/bundle/{{ uuid }}/?={% now "U" %}"></script>
 {% endblock extra_scripts %}
 
+{% block navbar %}
+  <div id="cl-search-bar" style="height: 50px; z-index:1000;"></div>
+{% endblock %}
 {% block content %}
 <div id="bundle-content">
 </div>
