adds search bar to user profile page

--- a/codalab/apps/web/templates/web/user_profile.html
+++ b/codalab/apps/web/templates/web/user_profile.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 {% block head_title %}Home{% endblock %}
+{% block navbar %}
+  <div id="cl-search-bar" style="height: 50px; z-index:1000;"></div>
+{% endblock %}
 {% block nosubheader %} {% endblock nosubheader %}
 {% block title %}{% endblock title %}
 {% block hero_subheader %}{% endblock hero_subheader %}
