--- a/codalab/apps/web/templates/web/user_profile.html
+++ b/codalab/apps/web/templates/web/user_profile.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+{% block navbar %}
+  <div id="cl-search-bar" style="height: 50px; z-index:1000;"></div>
+{% endblock %}
 {% block head_title %}Home{% endblock %}
 {% block nosubheader %} {% endblock nosubheader %}
 {% block title %}{% endblock title %}
