--- a/codalab/apps/web/static/js/worksheet/styles/styles.less
+++ b/codalab/apps/web/static/js/worksheet/styles/styles.less
@@ -1,6 +1,6 @@
 .cl-userprofile-usericon {
-  border-radius: "50%";
-  border: "1px solid #ccc";
-  margin: "9px";
-  width: "5%";
+  border-radius: 50%;
+  border: 1px solid #ccc;
+  margin: 9px;
+  width: 5%;
 }
