--- a/codalab/apps/web/static/js/worksheet/navbar/navbar.less
+++ b/codalab/apps/web/static/js/worksheet/navbar/navbar.less
@@ -9,7 +9,8 @@
 }
 
 .cl-navbar-leftcontainer {
-  width: 600px;
+  width: 500px;
+  min-width: 300px;
   display: flex;
 }
 
@@ -24,6 +25,7 @@
 
 .cl-navbar-rightcontainer {
   width: 400px;
+  min-width: 400px;
   display: flex;
   flex-direction: row;
   align-items: center;
