renames new front end code's DOM endpoint to cl-main

--- a/codalab/apps/web/templates/base.html
+++ b/codalab/apps/web/templates/base.html
@@ -67,7 +67,7 @@
             </div>
             {% block top_bar_right_menus %}
                 <div class="collapse navbar-collapse" id="navbar_collapse">
-                    <span id="cl-search-bar">
+                    <span id="cl-main">
   -->
                     <!-- search bar binds here -->
                     <!--
