--- a/codalab/apps/web/templates/web/bundles/detail.html
+++ b/codalab/apps/web/templates/web/bundles/detail.html
@@ -14,7 +14,7 @@
 {% endblock extra_scripts %}
 
 {% block navbar %}
-  <div id="cl-search-bar" style="height: 50px; z-index:1000;"></div>
+  <div id="cl-main" style="height: 50px; z-index:1000;"></div>
 {% endblock %}
 {% block content %}
 <div id="bundle-content">
