--- a/codalab/apps/web/templates/web/index.html
+++ b/codalab/apps/web/templates/web/index.html
@@ -31,7 +31,7 @@
 {% endblock hero_subheader %}
 
 {% block navbar%}
-  <div id="cl-search-bar" style="height: 50px; z-index:1000;"></div>
+  <div id="cl-main" style="height: 50px; z-index:1000;"></div>
 {% endblock %}
 
 {% block content %}
