--- a/codalab/apps/web/templates/web/worksheets/detail.html
+++ b/codalab/apps/web/templates/web/worksheets/detail.html
@@ -22,7 +22,7 @@
 </div>
 
 <div id="worksheet_container_outside" style="display:flex;flex-direction:column;">
-    <div id="cl-search-bar" style="height: 50px; z-index:1000;"></div>
+    <div id="cl-main" style="height: 50px; z-index:1000;"></div>
     <div id="worksheet_container" style="height:99%;">
       <!-- worksheet html will go here-->
     </div>
