--- a/codalab/apps/web/templates/web/account/profile.html
+++ b/codalab/apps/web/templates/web/account/profile.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block navbar %}
-  <div id="cl-search-bar" style="height: 50px; z-index:1000;"></div>
+  <div id="cl-main" style="height: 50px; z-index:1000;"></div>
 {% endblock %}
 
 {% load url from future %}
