--- a/codalab/apps/web/static/less/worksheets.less
+++ b/codalab/apps/web/static/less/worksheets.less
@@ -789,6 +789,7 @@ html, body, #worksheet_container {height:100%;}
     margin: 3px;
     border: none;
     box-shadow: -8px 8px 17px 0px rgba(0,0,0,0.2);
+    transform: translate(0px, 0px);
 }
 
 .help-button:focus {
